<resources>
    <string name="app_name">Todo</string>

    <!--Login-->
    <string name="button_login">ログイン</string>
    <string name="button_register">登録する</string>
    <string name="label_mail">メールアドレス</string>
    <string name="label_password">パスワード</string>
    <string name="hint_mail">メールアドレスを入力</string>
    <string name="hint_password">パスワードを入力</string>

    <!--TodoList-->
    <string name="button_logout">ログアウト</string>

    <!--Save-->
    <string name="hint_todo_title">タイトル</string>
    <string name="hint_todo_content">内容</string>
    <string name="empty_title">タイトルを入力してください</string>

    <!--Dialog Message-->
    <string name="title_logout">ログアウトしますか？</string>
    <string name="positive_logout">はい</string>
    <string name="negative_logout">いいえ</string>

    <!--Firebase Login Register Message-->
    <string name="login_register_faild">ログインに失敗しました</string>
    <string name="empty_mail">メールアドレスを入力してください</string>
    <string name="empty_password">パスワードを入力してください</string>

    <!--Firebase TodoData-->
    <string name="todo_data_users">users</string>
    <string name="todo_data_title">title</string>
    <string name="todo_data_content">content</string>
    <string name="todo_data_isCompleted">isCompleted</string>
</resources>
